# AegisTactical-Autonomous-Naval-Combat-Simulation-Engine

./: .gitignore  AircraftCarrier.cpp  AircraftCarrier.h  AttackSubmarine.cpp  AttackSubmarine.h  BattleLog.cpp  BattleLog.h  CMakeLists.txt  GridCoordinate.cpp  GridCoordinate.h  GuidedMissileFrigate.cpp  GuidedMissileFrigate.h  NavalVessel.cpp  NavalVessel.h  README.md  SimulationEngine.cpp  SimulationEngine.h  WeatherSystem.cpp  WeatherSystem.h  main.cpp
